@@ -1,3 +1,13 @@
+Tue Jan 19 22:47:38 UTC 2010  Steven Stallion  <stallions@ociweb.com>
+
+        * dds/InfoRepo/DCPSInfoRepoServ.h:
+        * dds/InfoRepo/DCPSInfoRepoServ.cpp:
+        * dds/InfoRepo/DCPSInfo_i.h:
+        * dds/InfoRepo/DCPSInfo_i.cpp:
+
+          Added finalize operation on TAO_DDS_DCPSInfo_i to cleanup
+          state when the DCPSInfoRepo is shutdown.
+
 Tue Jan 19 22:22:48 UTC 2010  Steven Stallion  <stallions@ociweb.com>
 
         * dds/DCPS/transport/framework/TransportSendBuffer.h:
